<resources>
    <string name="app_name">Gaja Merchant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_download_guide">Download Guide Book</string>
    <string name="menu_download_qris">Download QRIS</string>
    <string name="menu_receive_payment">Receive Payment</string>
    <string name="menu_merchant">Merchant</string>
    <string name="menu_trans_history">Transaction History</string>
    <string name="menu_help">Help</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_term_condition">Terms &amp; Conditions</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_versi_apps">1.0.3</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="str_login">Login</string>
    <string name="txt_forgot">Forgot PIN?</string>
    <string name="str_forget_pin">Forget PIN</string>
    <string name="str_forget_pin_notice">Contact us to reset PIN :</string>
    <string name="str_login_to_register">New to GPay? Register now</string>
    <string name="str_registration">Registration</string>
    <string name="str_forgot_pin">Forgot PIN</string>
    <string name="str_please_input">Please input the following information</string>
    <string name="str_enter_otp">OTP Verification</string>
    <string name="str_term_condition">
        <u>I agree with the Terms &amp; Conditions</u>
    </string>
    <string name="frequency_limit">Transaction Frequency Exceeding Limit</string>
    <string name="str_popup_no_internet_conn">No Internet Connection !</string>
    <string name="str_sms_regis">SMS Registration code</string>
    <string name="str_sent_sms_OTP">We\'ve sent SMS OTP to [NomorTelp].\nPlease enter the code to proceed</string>
    <string name="str_sent_sms_OTP1">We\'ve sent SMS OTP to</string>
    <string name="str_sent_sms_OTP2">Please enter the code to proceed</string>
    <string name="str_resend_sms">
        <u>Resend SMS OTP</u>
    </string>
    <string name="str_resend_otp">Resend OTP in</string>
    <string name="str_create_pin">Create PIN</string>
    <string name="str_confirm_pin">Confirm 6-digit PIN</string>
    <string name="txt_create_pin">Your PIN will be used for Login and \nTransactions in GPay</string>
    <string name="txt_mobile_number">Mobile Number</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="txt_enter_pin">Input PIN</string>
    <string name="str_first_name">First Name</string>
    <string name="str_last_name">Last Name</string>
    <string name="str_email_address">Email Address</string>
    <string name="str_confirm_email_address">Confirm Email Address</string>
    <string name="str_date_of_birth">Date of Birth</string>
    <string name="str_smscode">SMS code</string>
    <string name="str_name_home">Hello</string>
    <string name="txt_money">Rp 0</string>
    <string name="str_balance">Balance</string>
    <string name="txt_phoneNumber"></string>
    <string name="txt_62">62</string>
    <string name="str_account_number">Account Number</string>
    <string name="str_cardActive">Active</string>
    <string name="str_member_status">Account Status</string>
    <string name="str_showQR_code">Show QR code</string>
    <string name="str_showQR_receive_payment">Receive Payment</string>
    <string name="str_generate_QR_receive_payment">Generate QR Code</string>
    <string name="str_generate_QR">Generate QR</string>
    <string name="str_scan">Scan</string>
    <string name="str_transaction">Transactions</string>
    <string name="str_trans_amount">Amount</string>
    <string name="str_loading_data">Loading Data</string>
    <string name="str_home_receivepayment">Receive Payment</string>
    <string name="str_from_data">From</string>
    <string name="str_to_data">To</string>
    <string name="str_home_transhistory">Transaction History</string>
    <string name="str_home_voucher">Voucher</string>
    <string name="str_home_voucher_validation">Validation</string>
    <string name="str_store_name">Store Name</string>
    <string name="str_store_location">Store location address line 1</string>
    <string name="str_store_email">Store email@email.com</string>
    <string name="str_store_phone_number">Phone number</string>
    <string name="str_trx_amount">Transaction Amount:</string>
    <string name="str_history">History</string>
    <string name="str_transaction_history">
        <u>Transactions History</u>
    </string>
    <string name="str_settlement_history_header">Settlement History</string>
    <string name="str_transaction_history_header">Transaction History</string>
    <string name="str_today_transaction">Today Transaction</string>
    <string name="str_no_transaction_today">No transaction for today</string>
    <string name="str_no_transaction_tanggal">No transaction for chosen date</string>
    <string name="str_settlement_day">Maximum last 14 days</string>
    <string name="str_settlement_day_validation">Maximum last 14 days</string>
    <string name="str_home_transaction">Transaction</string>
    <string name="str_home_history_settlement">History</string>
    <string name="str_home_history">History</string>
    <string name="str_receive_payment">Receive Payment</string>
    <string name="str_home_settlement">Settlement</string>
    <string name="str_home_receive">Receive</string>
    <string name="str_home_payment">Payment</string>
    <string name="str_transaction_validasi_tglawalkosong">First date cannot be empty</string>
    <string name="str_transaction_validasi_tglawalbesar">The start date cannot be greater than the end date</string>
    <string name="str_transaction_from">From</string>
    <string name="str_transaction_to">To</string>
    <string name="str_valid_five">valid for 5 minutes</string>
    <string name="str_valid_in">Valid in</string>
    <string name="str_code_expires">QR Code expires in</string>
    <string name="str_receive_amount">Amount</string>
    <string name="str_receive_amount_detail">Amount:</string>
    <string name="str_close">Close</string>
    <string name="str_enter_your_pin">Please enter your PIN to continue</string>
    <string name="str_input_old_pin">Input Current PIN</string>
    <string name="str_input_login_pin">Input PIN</string>
    <string name="str_input_login_pin_title">Login PIN</string>
    <string name="str_input_old_pass">Input Current Password</string>
    <string name="str_input_pass">Input Password</string>
    <string name="txt_card_number">380000000433</string>
    <string name="str_card_number">Card number</string>
    <string name="txt_digit_pin">6-digit PIN</string>
    <string name="str_my_profile">My Profile</string>
    <string name="str_basic_service">Basic Service</string>
    <string name="txt_syamsi"></string>
    <string name="txt_test">test</string>
    <string name="txt_email"></string>
    <string name="txt_date">29 May 1985</string>
    <string name="str_use_touch_id">Use Fingerprint or Face Recognition</string>
    <string name="str_change_pin">Change PIN</string>
    <string name="str_change_pass">Change Password</string>
    <string name="txt_old_pin">Input Old PIN</string>
    <string name="txt_set_new_pin">Set New PIN</string>
    <string name="txt_confirm_new_pin">Confirm New PIN</string>
    <string name="str_upgrade_regis">Upgrade to Full Service</string>
    <string name="txt_gender_selected">Gender (please select)</string>
    <string name="str_your_photo">Your Photo\n(Selfie with Identity Card)</string>
    <string name="str_re_confirm_new_pin">Re-confirm New PIN</string>
    <string name="str_identity_card">Identity Card</string>
    <string name="txt_identity_card_number">ID Number (KTP/SIM)</string>
    <string name="txt_male">Male</string>
    <string name="txt_female">Female</string>
    <string name="txt_place_of_birth">Place of Birth</string>
    <string name="txt_mother_maiden_name">Mother\'s Maiden Name</string>
    <string name="txt_occupation_select">Occupation (please select)</string>
    <string name="str_nationality">Nationality</string>
    <string name="str_occupation">Occupation</string>
    <string name="str_address_as_per_id">Address as per ID Card</string>
    <string name="str_postal_code">Postal Code</string>
    <string name="str_current_address_is">Current address is the\nsame as per ID Card</string>
    <string name="txt_zip_code">ZIP Code</string>
    <string name="txt_country_select">Country (please select)</string>
    <string name="txt_province_select">Province (please select)</string>
    <string name="txt_city_select">City (please select)</string>
    <string name="txt_address">Address</string>
    <string name="txt_zip_code_as_id_card">ZIP Code (as per ID card)</string>
    <string name="txt_address_as_id_card">Address (as per ID card)</string>
    <string name="str_country">Country (as per ID card)</string>
    <string name="txt_please_select">please select</string>
    <string name="str_province">Province</string>
    <string name="str_city">City</string>
    <string name="str_upgrade_user">Upgrade User</string>
    <string name="str_update_profile">Update Profile</string>
    <string name="str_our_customer">Our Customer Service team is ready to \nassist if you have any questions or
        \nproblems in using the app.
    </string>
    <string name="str_please_send_your">Please send your feedback or complaints \nto:</string>
    <string name="str_by_email">By Email</string>
    <string name="str_hellogpay">hello@gpay.id</string>
    <string name="str_helpdeskgpay">helpdesk.ops@gpay.id</string>
    <string name="str_contact_us">CONTACT US</string>
    <string name="str_contact_us_lowercase">Contact Us</string>
    <string name="str_forget_pin_lowercase">Forget PIN ?</string>
    <string name="str_term">Terms &amp; Conditions</string>
    <string name="str_selamat_datang">Welcome,</string>
    <string name="str_syarat_dan_ketentuan">Syarat dan ketentuan GPay</string>
    <string name="str_silakan_membaca">Silakan membaca Syarat dan Ketentuan berikut\ndengan seksama dalam menggunakan
        layanan\naplikasi kami.
    </string>
    <string name="str_intruksi_anda">Intruksi Anda Prioritas Kami</string>
    <string name="str_by_phone">By Phone</string>
    <string name="txt_by_ops_phone_number">+62 21 2525971</string>
    <string name="str_working_hours">Working Hours</string>
    <string name="txt_mon_fri">Mon-Fri (8am - 5pm)</string>
    <string name="txt_tigaratus">300,000</string>
    <string name="str_transaction_detail">Transaction Detail</string>
    <string name="str_transdetail_date">Date:</string>
    <string name="str_transdetail_desc">Transaction Type:</string>
    <string name="str_transdetail_cust">Customer:</string>
    <string name="str_transdetail_refid">Ref ID:</string>
    <string name="txt_number_transaction">4567</string>
</resources>