<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_contactus"
            android:title="@string/menu_contact_us"/>
        <item
            android:id="@+id/nav_help"
            android:title="@string/menu_help"/>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/str_my_profile"/>
        <item
            android:id="@+id/nav_term"
            android:title="@string/menu_term_condition"/>

        <item
            android:id="@+id/nav_log_out"
            android:title="@string/menu_log_out"/>
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/menu_share"/>-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="@string/menu_send"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
