<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/blue"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/action_back"
            android:layout_width="53dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/menu_contact_us"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_big_c" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="71dp"
                        android:layout_height="31dp"
                        android:layout_gravity="left"
                        android:src="@drawable/logo_gpay" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:fontFamily="@font/roboto_regular"
                        android:letterSpacing="0.01"
                        android:text="@string/str_by_email"
                        android:textColor="@color/greyish_brown_two"
                        android:textSize="@dimen/txt_size_xmedium" />

                    <TextView
                        android:id="@+id/text_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto_medium"
                        android:letterSpacing="0.01"
                        android:text="@string/str_helpdeskgpay"
                        android:textColor="@color/bluemerchantapp"
                        android:textSize="@dimen/txt_size_big_a" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:fontFamily="@font/roboto_regular"
                        android:letterSpacing="0.01"
                        android:text="@string/str_by_phone"
                        android:textColor="@color/greyish_brown_two"
                        android:textSize="@dimen/txt_size_xmedium"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/text_number_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto_medium"
                        android:letterSpacing="0.01"
                        android:text="@string/txt_by_ops_phone_number"
                        android:textColor="@color/bluemerchantapp"
                        android:textSize="@dimen/txt_size_big_a" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/str_working_hours"
                        android:textColor="@color/greyish_brown_two"
                        android:textStyle="normal"
                        android:textSize="@dimen/txt_size_xmedium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/txt_mon_fri"
                        android:textColor="@color/bluemerchantapp"
                        android:textSize="@dimen/txt_size_big_a" />

                    <TextView
                        android:id="@+id/versiapps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="55dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/menu_versi_apps"
                        android:visibility="gone"
                        android:textColor="@color/greyish_brown_two"
                        android:textSize="@dimen/txt_size_big_a" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
