<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/action_silang"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:scaleType="centerInside"
                android:src="@drawable/close_material_black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo_gpay" />

            <TextView
                android:id="@+id/txt_trans_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/sourcesanspro_semibold"
                android:text="@string/str_transaction_detail"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="@dimen/txt_size_big_d" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/transdetail_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/sourcesanspro_semibold"
                    android:text="@string/str_transdetail_date"
                    android:textColor="@color/greyish_brown_two"
                    android:textSize="@dimen/txt_size_big_b" />

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/transdetail_date"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:text="@string/txt_date"
                    android:textColor="@color/greyish_brown"
                    android:textSize="@dimen/txt_size_big_a" />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/sourcesanspro_semibold"
                    android:text="@string/str_transdetail_desc"
                    android:textColor="@color/greyish_brown_two"
                    android:textSize="@dimen/txt_size_big_b" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/sourcesanspro_semibold"
                    android:text="@string/str_transdetail_cust"
                    android:textColor="@color/greyish_brown_two"
                    android:textSize="@dimen/txt_size_big_b" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/sourcesanspro_semibold"
                    android:text="Issuer"
                    android:textColor="@color/greyish_brown_two"
                    android:textSize="@dimen/txt_size_big_b" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/sourcesanspro_semibold"
                    android:text="RRN"
                    android:textColor="@color/greyish_brown_two"
                    android:textSize="@dimen/txt_size_big_b" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/txt_refid_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:text="@string/str_transdetail_refid"
                    android:textColor="@color/greyish_brown_two"
                    android:textSize="@dimen/txt_size_big_c" />

                <TextView
                    android:id="@+id/txt_refid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_toRightOf="@+id/txt_refid_title"
                    android:fontFamily="@font/sourcesanspro_regular"
                    android:text=" 833292"
                    android:textColor="@color/greyish_brown_two"
                    android:textSize="@dimen/txt_size_big_c" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/sourcesanspro_regular"
                android:text="@string/txt_tigaratus"
                android:textColor="@color/greyish_brown_two"
                android:textSize="@dimen/txt_size_big_j" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/grey_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_grey_new_corners10"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/txt_transactionID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sourcesanspro_semibold"
                    android:padding="13dp"
                    android:text="@string/txt_number_transaction"
                    android:textColor="@color/greyish_brown_two"
                    android:textSize="@dimen/txt_size_big_f" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/imgBarcode"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>

