<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/blue"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/action_back"
            android:layout_width="53dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/str_receive_payment"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_big_c"
            android:textStyle="normal" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/change_pin_layout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/roboto_medium"
                    android:letterSpacing="0.01"
                    android:text="@string/str_receive_amount_detail"
                    android:textColor="@color/blackGPay"
                    android:textSize="@dimen/txt_size_big_a"
                    app:layout_constraintEnd_toEndOf="@+id/edt_amount"
                    app:layout_constraintHorizontal_bias="0.462"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:letterSpacing="0.01"
                    android:text="Rp"
                    android:textColor="@color/blackGPay"
                    android:textSize="@dimen/txt_size_big_a"
                    app:layout_constraintBottom_toBottomOf="@+id/edt_amount"
                    app:layout_constraintEnd_toStartOf="@+id/edt_amount"
                    app:layout_constraintHorizontal_bias="0.897"
                    app:layout_constraintStart_toStartOf="parent">

                </TextView>

                <EditText
                    android:id="@+id/edt_amount"
                    android:layout_width="187dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="52dp"
                    android:backgroundTint="@color/warm_grey_two"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColor="@color/greyish_brown_two"
                    android:textColorHint="@color/grey_hint"
                    android:textSize="@dimen/txt_size_big_b"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_generateQR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/bg_blue_corners10"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/str_generate_QR_receive_payment"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_big_a" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
